kubernetes/darkmore/gateway/gateway-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-public
  namespace: kgateway-system
  annotations: 
    cert-manager.io/cluster-issuer: cert-manager-webhook-dnsimple-production
spec: 
  gatewayClassName: 'kgateway'
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: gateway-public

  allowedListeners:
    namespaces:
      from: All

  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          # there's only one route allowed for HTTP, and it is the HTTPS redirect
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      hostname: '*.ramona.fun'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-ramona-fun
