kubernetes/darkmore/gateway/gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-public
  namespace: kgateway-system
  annotations: 
    cert-manager.io/cluster-issuer: cert-manager-webhook-dnsimple-production
spec: 
  gatewayClassName: 'kgateway'
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: gateway-public

  allowedListeners:
    namespaces:
      from: All

  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          # there's only one route allowed for HTTP, and it is the HTTPS redirect
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      hostname: '*.ramona.fun'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: wildcard-ramona-fun
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tailscale
  namespace: kgateway-system
  annotations: 
    # TODO https://github.com/kubernetes-sigs/external-dns/issues/6507
    "external-dns.kubernetes.io/target": "100.119.189.53"
    cert-manager.io/cluster-issuer: cert-manager-webhook-dnsimple-production
spec: 
  gatewayClassName: 'kgateway'
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: gateway-tailscale

  allowedListeners:
    namespaces:
      from: All

  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          # there's only one route allowed for HTTP, and it is the HTTPS redirect
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      hostname: '*.infrastructure.ramona.fun'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: wildcard-infrastructure-ramona-fun
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https
  namespace: kgateway-system
spec:
  parentRefs:
    - name: gateway-tailscale 
      namespace: kgateway-system
      sectionName: http
      group: gateway.networking.k8s.io
      kind: Gateway
    - name: gateway-public
      namespace: kgateway-system
      sectionName: http
      group: gateway.networking.k8s.io
      kind: Gateway
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tailscale-internal
  namespace: kgateway-system
  annotations: 
    # TODO https://github.com/kubernetes-sigs/external-dns/issues/6507
    "external-dns.kubernetes.io/target": "100.86.28.137"
spec: 
  gatewayClassName: 'kgateway'
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: gateway-tailscale-internal

  allowedListeners:
    namespaces:
      from: All

  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: TLS
      hostname: '*.internal.ramona.fun'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
