kubernetes/darkmore/gateway/jellyfin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: kgateway-system
spec:
  parentRefs:
  - name: gateway-public
    namespace: kgateway-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
    - jellyfin.ramona.fun
  rules:
    - backendRefs:
      - name: jellyfin
        kind: Backend
        group: gateway.kgateway.dev
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: "3600s"
        request: "3600s"
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: kgateway-system
  annotations:
    tailscale.com/tailnet-fqdn: "hallewell.ibis-draconis.ts.net"
    tailscale.com/proxy-group: "egress-proxies"
spec:
  type: ExternalName
  externalName: placeholder
  ports:
    - port: 8096
      protocol: TCP
      name: http
